Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106937

Since Qt 6.3 QWebSocket::errorString() displays random http status code if status != 400

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 6.4.1, 6.5.0 Beta1
    • 6.3, 6.4.0 RC1
    • WebSockets
    • None
    • All
    • 5
    • 17b96b3158 (qt/qtwebsockets/dev) 1d8fed1d61 (qt/qtwebsockets/6.4) 1d8fed1d61 (qt/tqtc-qtwebsockets/6.4) 17b96b3158 (qt/tqtc-qtwebsockets/dev) 1d8fed1d61 (qt/qtwebsockets/6.4.1) 1d8fed1d61 (qt/tqtc-qtwebsockets/6.4.1)
    • Foundation Sprint 67

      Since Qt 6.3 introduced bug: QWebSocket::errorString() displays random http status in the error message if connection was closed with status code other than 400.

      in the following line m_httpStatusCode is not initialized:

      https://code.qt.io/cgit/qt/qtwebsockets.git/tree/src/websockets/qwebsocket_p.cpp#n1061

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vuokko Juha Vuolle
            dilshodm Dilshod Mukhtarov
            Vladimir Minenko Vladimir Minenko
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes