Fix uninitialized QWebSocket::errorString()

Amends: bbd9f2f4f5e0fda85029fa320f793973ea607c2b

Fixes: QTBUG-106937
Change-Id: Ia805df3e3dd8ba61e53592ebfb0a8bfae9184042
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
(cherry picked from commit 17b96b31585e338afe5f5c71706a12cc3d2cd740)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>