src/websockets/qwebsocket_p.h
@@ -220,11 +220,6 @@ private:
     QDefaultMaskGenerator m_defaultMaskGenerator;
 
     QByteArray m_statusLine;
-    int m_httpStatusCode;
-    int m_httpMajorVersion, m_httpMinorVersion;
-    QString m_httpStatusMessage;
-    QMultiMap<QString, QString> m_headers;
-
     quint64 m_outgoingFrameSize;
 
     friend class QWebSocketServerPrivate;
